@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-25T16:12:00Z",
-  "count" : 2,
+  "timestamp" : "2023-11-08T08:11:58Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
