@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-11-08T00:43:09Z",
+  "timestamp" : "2023-11-08T08:11:58Z",
   "count_outdated" : 1859,
   "uniques_outdated" : 639,
-  "count" : 2016,
-  "uniques" : 655,
+  "count" : 2017,
+  "uniques" : 656,
   "views" : [
     {
       "timestamp": "2023-10-25T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-10-26T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2023-11-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
