@@ -4,8 +4,8 @@
   "views": [
     {
       "timestamp": "2023-10-25T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-26T00:00:00Z",
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2023-11-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
